Fix z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ body {
   top: 0;
   right: 0;
   padding: 15px 15px 12px 15px;
+  z-index: 3;
   transition:
     background-color 300ms ease;
 }
